almost done commenting, was at the S&P500 weighted index plotting part

--- a/stock_analysis.ipynb
+++ b/stock_analysis.ipynb
@@ -12,7 +12,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "In this notebook, I will attempt to see how the various sectors performed on the stock market in 2022 by creating a market cap-weighted index of each sector, and plotting its returns over the year. \n",
+    "In this notebook, I will attempt to investigate how the various sectors performed on the stock market in 2022 by creating a market cap-weighted index of each sector, and plotting its returns over the year.\n",
     "\n",
     "The stocks are classified into sectors according to the Global Industry Classificaiton  Standard (GICS):\n",
     "- Communication Services\n",
@@ -61,7 +61,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "I first had to get a table of all the stocks currently trading in the US. I downloaded the data below from the NASDAQ Stock Screener."
+    "I first had to get a table of all the stocks currently trading in the US. I downloaded the data below from the [NASDAQ Stock Screener](https://www.nasdaq.com/market-activity/stocks/screener)."
    ],
    "metadata": {
     "collapsed": false
@@ -127,7 +127,7 @@
    "cell_type": "markdown",
    "source": [
     "Next, I downloaded the 2022 price history of each stock, saving each in its own file in the folder `us_stocks`.\n",
-    "This price data is from Yahoo Finance, accessed through the `yfinance` library. "
+    "This price data is from [Yahoo Finance](https://finance.yahoo.com), accessed through the `yfinance` library."
    ],
    "metadata": {
     "collapsed": false
@@ -5283,6 +5283,15 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "I need to replace '^' (found in NASDAQ stock tickers) with '-P' (found in Yahoo finance stock tickers). I also need to replace any '/' found in the ticker name with '{slash}' (as / is not allowed in file name)>"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "outputs": [],
@@ -5302,6 +5311,15 @@
    "cell_type": "markdown",
    "source": [
     "### Cleaning up data (mostly renaming of Sectors"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "In this section, I clean up the data, making sure each stock has a Sector and Market Cap, and the Sector names are in line with the Global Industry Classification Standard (GICS)."
    ],
    "metadata": {
     "collapsed": false
@@ -5742,27 +5760,24 @@
    }
   },
   {
-   "cell_type": "code",
-   "execution_count": 29,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "7838367059.154545"
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
+   "cell_type": "markdown",
+   "source": [
+    "For testing purposes, `us_stocks`, I calculate the mean Market Cap:"
    ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "us_stocks[(us_stocks['Sector']=='Financials') & (~us_stocks['Market Cap'].isna())]['Market Cap'].mean() #the mean market capitalisation"
    ],
    "metadata": {
     "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-07-30T17:34:53.136805985Z",
-     "start_time": "2023-07-30T17:34:53.120300828Z"
-    }
+    "is_executing": true
    }
   },
   {
@@ -5778,6 +5793,15 @@
      "end_time": "2023-07-30T17:34:53.294366458Z",
      "start_time": "2023-07-30T17:34:53.128646757Z"
     }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Any rows with missing items are dropped at this point - I haven't been able to find the data."
+   ],
+   "metadata": {
+    "collapsed": false
    }
   },
   {
@@ -5805,6 +5829,15 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "I start off with building an S&P500 Equal Weight Index (for simplicity). This is the S&P 500 index, but with each stock having an equal weighting in the index."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": 32,
    "outputs": [],
@@ -5825,6 +5858,15 @@
      "end_time": "2023-07-30T17:35:10.692640036Z",
      "start_time": "2023-07-30T17:34:53.362416012Z"
     }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "For testing purposes, I plot the daily percentage change in Google's GOOG stock, for 2022:"
+   ],
+   "metadata": {
+    "collapsed": false
    }
   },
   {
@@ -5857,6 +5899,15 @@
      "end_time": "2023-07-30T17:35:11.902492370Z",
      "start_time": "2023-07-30T17:35:10.736195070Z"
     }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "A dataframe of S&P 500 tickers is scraped from a wikipedia article:"
+   ],
+   "metadata": {
+    "collapsed": false
    }
   },
   {
@@ -5897,6 +5948,15 @@
      "end_time": "2023-07-30T17:35:15.504946708Z",
      "start_time": "2023-07-30T17:35:15.498193785Z"
     }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Then I isolate the S&P 500 tickers I managed to download (and managed to fill in missing data):"
+   ],
+   "metadata": {
+    "collapsed": false
    }
   },
   {
@@ -6455,6 +6515,15 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "`snp_weights` is a list of the tickers' relative weights. As this is an Equal Weight Index, each stock has an equal weighting:"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": 38,
    "outputs": [],
@@ -6467,6 +6536,15 @@
      "end_time": "2023-07-30T17:35:15.905988338Z",
      "start_time": "2023-07-30T17:35:15.712496995Z"
     }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "`snp_index` contains the daily returns of each stock in the index, on each trading day in 2022:"
+   ],
+   "metadata": {
+    "collapsed": false
    }
   },
   {
@@ -7230,6 +7308,15 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "The `index_returns` variable is added to `snp_index`, and this is the calculation of the index's returns on each trading day in 2022:"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": 40,
    "outputs": [
@@ -7264,6 +7351,15 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "The index returns are converted to cumulative returns to give the total returns through time"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": 41,
    "outputs": [
@@ -7285,6 +7381,15 @@
      "end_time": "2023-07-30T17:35:17.119777776Z",
      "start_time": "2023-07-30T17:35:16.904231542Z"
     }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "And the result is plotted. The resulting plot is very similar to the actual S&P 500 EWI graph, indicating that the tickers that had to be excluded did not have a major effect on the final result."
+   ],
+   "metadata": {
+    "collapsed": false
    }
   },
   {
@@ -7318,6 +7423,15 @@
      "end_time": "2023-07-30T17:35:17.392332041Z",
      "start_time": "2023-07-30T17:35:17.032927471Z"
     }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "I then follow the same steps to create the actual S&P 500 (weighted) index:"
+   ],
+   "metadata": {
+    "collapsed": false
    }
   },
   {
